fixes horizontal scrollbar issue removes light overlay from background

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -16,18 +16,8 @@ body {
   position: relative;
   background-image: repeating-linear-gradient(to right, var(--green) 0, var(--green) 2%, var(--blue) 2% 4%);
   min-height: 100vh;
-  min-width: 100vw;
-}
-
-body::after {
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, .3);
-  z-index: -2;
+  padding: 0;
 }
 
 /* Modal */
@@ -116,7 +106,7 @@ span.icon i {
 
 /* Catalog View */
 .card-item {
-  max-width: 285px;
+  max-width: 20rem;
 }
 
 .card img {
